# HetHypPar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  downloader.py  matrices  matrices.txt  mxvSampler.py  neovim.json  partitioner.py
matrices/: butub1000.mtx  tub1000.mtx
src/: CMakeLists.txt  cuSparse.c  main.c  main_gpu.c  main_patoh.c  partition.c  split.c  spmxv_wrapper.c
src/headers/: common.h  cuSparse.h  partition.h  split.h  spmxv_wrapper.h  util.h
src/precompiled_deps/headers/: patoh.h
